Личный проект: продолжаем разметку
Личный проект: продолжаем разметку

--- a/hotels.html
+++ b/hotels.html
@@ -10,13 +10,13 @@
 	<body>
   	<header>
 		<nav>
-			<a class="main-header-logo">
+			<a href="index.html" class="main-header-logo">
 				<img src="img/logo-sedona.svg" width="138" height="70" alt="Логотип Седоны">
 			</a>
 		<ul class="site-navigation">
-				<li><a class="current-page" href="info.html">Информация</a></li>
-				<li><a href="photo-video.html">Фото и видео</a></li>
-				<li><a href="state-map.html">Карта штата</a></li>
+				<li><a class="current-page" href="#">Информация</a></li>
+				<li><a href="#">Фото и видео</a></li>
+				<li><a href="#">Карта штата</a></li>
 				<li><a href="hotels.html">Гостиницы</a></li>
 		</ul>
 		</nav>
