--- a/index.html
+++ b/index.html
@@ -8,22 +8,24 @@
 		<link href="css/style.css" rel="stylesheet">
 	</head>
 	<body>
-  	<header class="main-navigation">
+  	<header class="main-header">
 		<nav class="main-navigation">
-			<ul class="site-navigation-left">
-				<li><a class="current-page" href="#">Информация</a></li>
-				<li><a href="#">Фото и видео</a></li>
-			</ul>
-			<a class="main-header-logo" href="#">
-				<img src="img/logo-sedona.svg" width="138" height="70" alt="Логотип Седоны">
-			</a>
-			<ul class="site-navigation-right">
-				<li><a href="#">Карта штата</a></li>
-				<li><a href="hotels.html">Гостиницы</a></li>
-			</ul>
+			<div class="main-navigation-wrapper">
+				<ul class="site-navigation-left">
+					<li><a class="current-page" href="#">Информация</a></li>
+					<li><a href="#">Фото и видео</a></li>
+				</ul>
+				<a class="main-header-logo" href="#">
+					<img src="img/logo-sedona.svg" width="138" height="70" alt="Логотип Седоны">
+				</a>
+				<ul class="site-navigation-right">
+					<li><a href="#">Карта штата</a></li>
+					<li><a href="hotels.html">Гостиницы</a></li>
+				</ul>
+			</div>
 		</nav>
 	</header>
-	<main>
+	<main class="container">
 		<h1 class="visually-hidden">Добро пожаловать в Седону</h1>
 		<section class="intro">
 			<h2 class="visually-hidden">Почему надо ехать в Седону?</h2>
@@ -118,18 +120,22 @@
 		</section>	
 	</main>
 	<footer class="main-footer">
-		<p class="footer-hashtag">&#35;VISITSEDONA</p>
-		<ul>
-			<li><a class="social-button" href="#">Twitter</a></li>
-			<li><a class="social-button" href="#">Facebook</a></li>
-			<li><a class="social-button" href="#">YouTube</a></li>
-		</ul>
-		<p class="footer-copyright">
-			Website by
-			<a href="https://htmlacademy.ru/">
-				<img src="img/logo-htmlacademy.svg" width="114" height="40" alt="HTML Academy logo">
-			</a>
-		</p>
+		<div class="container">
+			<p class="footer-hashtag">&#35;VISITSEDONA</p>
+			<div class="footer-social">
+				<ul>
+					<li><a class="social-button" href="#">Twitter</a></li>
+					<li><a class="social-button" href="#">Facebook</a></li>
+					<li><a class="social-button" href="#">YouTube</a></li>
+				</ul>
+			</div>
+			<p class="footer-copyright">
+				Website by
+				<a href="https://htmlacademy.ru/">
+					<img src="img/logo-htmlacademy.svg" width="114" height="40" alt="HTML Academy logo">
+				</a>
+			</p>
+		</div>
 	</footer>
 </body>
 </html>
